# hybrid-theory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  dvc.yaml  eze_notebook.py  justfile  mlflow.db  params.yaml  pyproject.toml
cdade/: __init__.py  registry.py
cdade/ablation/: __init__.py  run_ablation.py
cdade/baselines/: __init__.py  ensemble_average.py  farrington.py  reconciliation_evt.py  run_baselines.py  single_best.py  static_topk.py
cdade/data/: __init__.py  dataset_paths.py  inject.py  prepare.py  sivep.py  synthetic.py  tycho.py
cdade/detectors/: __init__.py  cblof.py  cof.py  hbos.py  iforest.py  knn.py  lof.py  mcd.py  ocsvm.py  pca.py  run_detect.py  sos.py
cdade/ensemble/: __init__.py  cdade.py  logging.py  run_ensemble.py
cdade/evaluation/: __init__.py  metrics.py  run_evaluate.py  stats.py  stats_cli.py  stats_matrix.py
cdade/reconciliation/: __init__.py  base.py  bottom_up.py  evt.py  identity.py  min_t.py  run_reconcile.py  summing_matrix.py
cdade/selection/: __init__.py  competence.py  diversity.py  drift_detector.py  pseudo_label.py  run_select.py  selector.py
configs/: config.yaml
reports/: .gitignore  00-literature.qmd  01-architecture.qmd  02-results.qmd  03-ablation.qmd
tests/: test_ablation.py  test_baselines_b1.py  test_baselines_b2.py  test_baselines_b3_b4_b5.py  test_dataset_artifacts.py  test_dataset_paths.py  test_ensemble.py  test_evaluation_metrics.py  test_evaluation_run.py  test_evaluation_stats.py  test_pipeline_paths.py  test_registry_registration.py  test_selection.py
(+36 files in other folders)
