[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cdade"
version = "0.1.0"
description = "Coherent Drift-Aware Dynamic Ensemble for hierarchical anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
authors = [{ name = "Vinícius Nunes N V da Costa" }]
dependencies = [
    "numpy>=1.26,<2.4",
    "pandas>=2.1,<3",
    "scipy>=1.11,<2",
    "hydra-core>=1.3,<2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5,<5",
    "pytest>=8,<9",
    "pytest-cov>=5,<8",
    "ruff>=0.5,<1",
]
workflow = [
    "dvc>=3.30,<4",
    "mlflow>=2.9,<4",
]
data = [
    "pyarrow>=14,<22",
]
experiment = [
    "numba>=0.57,<0.66",
    "pyod>=2.0,<4",
    "river>=0.21,<1",
    "statsmodels>=0.14,<1",
]

[tool.uv]
constraint-dependencies = [
    "numba>=0.57; python_version >= '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["cdade"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["cdade", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["cdade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
